Bug 434910 - General sidebar button in Klipper settings can't accept left click in its upper area
Summary: General sidebar button in Klipper settings can't accept left click in its upp...
Status: RESOLVED FIXED
Alias: None
Product: klipper
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 5.21.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 417375 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-03-24 21:50 UTC by medin
Modified: 2021-04-01 18:54 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.21.4
Sentry Crash Report:


Attachments
General button can't accept left click (67.29 KB, image/png)
2021-03-24 21:50 UTC, medin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description medin 2021-03-24 21:50:53 UTC
Created attachment 137041 [details]
General button can't accept left click

See attached image for more info.

Operating System: Manjaro Linux
KDE Plasma Version: 5.21.3
KDE Frameworks Version: 5.80.0
Qt Version: 5.15.2
Kernel Version: 5.4.105-1-MANJARO
OS Type: 64-bit
Graphics Platform: X11
Comment 1 Nate Graham 2021-03-25 21:06:48 UTC
Can confirm. How weird. Does not seem to happen for other QWidgets-based settings dialogs using this style.
Comment 2 Bug Janitor Service 2021-03-26 00:57:39 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/742
Comment 3 David Edmundson 2021-03-26 10:24:58 UTC
Git commit 3f76ff9207e7c46bbdc68a14efda431cf3dd72a8 by David Edmundson.
Committed on 26/03/2021 at 10:24.
Pushed by davidedmundson into branch 'master'.

Remove pointless widget

This appears in the main view and intercepts keys whilst doing nothing

M  +1    -2    klipper/configdialog.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/3f76ff9207e7c46bbdc68a14efda431cf3dd72a8
Comment 4 David Edmundson 2021-03-26 10:32:17 UTC
Git commit cc1f8881bb551daf50d2829aa8a0cf8fae65dde9 by David Edmundson.
Committed on 26/03/2021 at 10:32.
Pushed by davidedmundson into branch 'Plasma/5.21'.

Remove pointless widget

This appears in the main view and intercepts keys whilst doing nothing


(cherry picked from commit 3f76ff9207e7c46bbdc68a14efda431cf3dd72a8)

M  +1    -2    klipper/configdialog.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/cc1f8881bb551daf50d2829aa8a0cf8fae65dde9
Comment 5 Nate Graham 2021-04-01 18:54:45 UTC
*** Bug 417375 has been marked as a duplicate of this bug. ***