Remove pointless widget

This appears in the main view and intercepts keys whilst doing nothing

BUG: 434910


(cherry picked from commit 3f76ff9207e7c46bbdc68a14efda431cf3dd72a8)